--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         maven {
             url "https://dl.bintray.com/kotlin/kotlin-eap"
         }
+        maven {
+            url  "https://kotlin.bintray.com/kotlin-js-wrappers"
+        }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
